--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "task.complex@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "wkhtmltopdf": "^0.4.0"
   }
 }
